compiler/generated/MathExprParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 MathExpr.g 2020-04-25 17:02:15

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class MathExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RETURN", "IF", "ELSE", "DO", "WHILE", "PROGRAM", "TYPE", "ARGS_DECL", "FUNC_DECL", "ARGS", "CALL", "BLOCK", "INDEX", "DIGIT", "LETTER", "NUMBER", "STRING", "IDENT", "WS", "'['", "']'", "'('", "')'", "','", "'*'", "'/'", "'+'", "'-'", "'%'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'='", "';'", "'{'", "'}'"
    };
    public static final int CALL=14;
    public static final int LETTER=18;
    public static final int ARGS=13;
    public static final int FUNC_DECL=12;
    public static final int DO=7;
    public static final int RETURN=4;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int ELSE=6;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int ARGS_DECL=11;
    public static final int INDEX=16;
    public static final int WS=22;
    public static final int EOF=-1;
    public static final int T__30=30;
    public static final int IF=5;
    public static final int TYPE=10;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int NUMBER=19;
    public static final int BLOCK=15;
    public static final int DIGIT=17;
    public static final int T__26=26;
    public static final int IDENT=21;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__23=23;
    public static final int STRING=20;
    public static final int T__24=24;
    public static final int WHILE=8;
    public static final int T__25=25;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int PROGRAM=9;

    // delegates
    // delegators


        public MathExprParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MathExprParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return MathExprParser.tokenNames; }
    public String getGrammarFileName() { return "MathExpr.g"; }


    public static class type0_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type0"
    // MathExpr.g:47:1: type0 : IDENT ( '[' ']' )* ;
    public final MathExprParser.type0_return type0() throws RecognitionException {
        MathExprParser.type0_return retval = new MathExprParser.type0_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IDENT1=null;
        Token char_literal2=null;
        Token char_literal3=null;

        Object IDENT1_tree=null;
        Object char_literal2_tree=null;
        Object char_literal3_tree=null;

        try {
            // MathExpr.g:47:6: ( IDENT ( '[' ']' )* )
            // MathExpr.g:48:3: IDENT ( '[' ']' )*
            {
            root_0 = (Object)adaptor.nil();

            IDENT1=(Token)match(input,IDENT,FOLLOW_IDENT_in_type0358); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENT1_tree = (Object)adaptor.create(IDENT1);
            adaptor.addChild(root_0, IDENT1_tree);
            }
            // MathExpr.g:48:9: ( '[' ']' )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==23) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // MathExpr.g:48:10: '[' ']'
            	    {
            	    char_literal2=(Token)match(input,23,FOLLOW_23_in_type0361); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal2_tree = (Object)adaptor.create(char_literal2);
            	    adaptor.addChild(root_0, char_literal2_tree);
            	    }
            	    char_literal3=(Token)match(input,24,FOLLOW_24_in_type0363); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal3_tree = (Object)adaptor.create(char_literal3);
            	    adaptor.addChild(root_0, char_literal3_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type0"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // MathExpr.g:50:1: type : type0 -> TYPE[$type0.text] ;
    public final MathExprParser.type_return type() throws RecognitionException {
        MathExprParser.type_return retval = new MathExprParser.type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        MathExprParser.type0_return type04 = null;


        RewriteRuleSubtreeStream stream_type0=new RewriteRuleSubtreeStream(adaptor,"rule type0");
        try {
            // MathExpr.g:50:5: ( type0 -> TYPE[$type0.text] )
            // MathExpr.g:51:3: type0
            {
            pushFollow(FOLLOW_type0_in_type374);
            type04=type0();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type0.add(type04.getTree());


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 51:10: -> TYPE[$type0.text]
            {
                adaptor.addChild(root_0, (Object)adaptor.create(TYPE, (type04!=null?input.toString(type04.start,type04.stop):null)));

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class term_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "term"
    // MathExpr.g:54:1: term : ( NUMBER | STRING | lvalue | funcCall | '(' logic ')' );
    public final MathExprParser.term_return term() throws RecognitionException {
        MathExprParser.term_return retval = new MathExprParser.term_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NUMBER5=null;
        Token STRING6=null;
        Token char_literal9=null;
        Token char_literal11=null;
        MathExprParser.lvalue_return lvalue7 = null;

        MathExprParser.funcCall_return funcCall8 = null;

        MathExprParser.logic_return logic10 = null;


        Object NUMBER5_tree=null;
        Object STRING6_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;

        try {
            // MathExpr.g:54:5: ( NUMBER | STRING | lvalue | funcCall | '(' logic ')' )
            int alt2=5;
            switch ( input.LA(1) ) {
            case NUMBER:
                {
                alt2=1;
                }
                break;
            case STRING:
                {
                alt2=2;
                }
                break;
            case IDENT:
                {
                int LA2_3 = input.LA(2);

                if ( (LA2_3==25) ) {
                    alt2=4;
                }
                else if ( (LA2_3==EOF||LA2_3==IDENT||(LA2_3>=23 && LA2_3<=24)||(LA2_3>=26 && LA2_3<=31)||(LA2_3>=33 && LA2_3<=38)||LA2_3==40) ) {
                    alt2=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 3, input);

                    throw nvae;
                }
                }
                break;
            case 25:
                {
                alt2=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // MathExpr.g:55:3: NUMBER
                    {
                    root_0 = (Object)adaptor.nil();

                    NUMBER5=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_term391); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NUMBER5_tree = (Object)adaptor.create(NUMBER5);
                    adaptor.addChild(root_0, NUMBER5_tree);
                    }

                    }
                    break;
                case 2 :
                    // MathExpr.g:56:3: STRING
                    {
                    root_0 = (Object)adaptor.nil();

                    STRING6=(Token)match(input,STRING,FOLLOW_STRING_in_term395); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    STRING6_tree = (Object)adaptor.create(STRING6);
                    adaptor.addChild(root_0, STRING6_tree);
                    }

                    }
                    break;
                case 3 :
                    // MathExpr.g:57:3: lvalue
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_lvalue_in_term399);
                    lvalue7=lvalue();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, lvalue7.getTree());

                    }
                    break;
                case 4 :
                    // MathExpr.g:58:3: funcCall
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_funcCall_in_term403);
                    funcCall8=funcCall();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, funcCall8.getTree());

                    }
                    break;
                case 5 :
                    // MathExpr.g:59:3: '(' logic ')'
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal9=(Token)match(input,25,FOLLOW_25_in_term407); if (state.failed) return retval;
                    pushFollow(FOLLOW_logic_in_term410);
                    logic10=logic();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, logic10.getTree());
                    char_literal11=(Token)match(input,26,FOLLOW_26_in_term412); if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "term"

    public static class args_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "args"
    // MathExpr.g:62:1: args : ( rvalue ( ',' rvalue )* )? -> ^( ARGS ( rvalue )* ) ;
    public final MathExprParser.args_return args() throws RecognitionException {
        MathExprParser.args_return retval = new MathExprParser.args_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal13=null;
        MathExprParser.rvalue_return rvalue12 = null;

        MathExprParser.rvalue_return rvalue14 = null;


        Object char_literal13_tree=null;
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleSubtreeStream stream_rvalue=new RewriteRuleSubtreeStream(adaptor,"rule rvalue");
        try {
            // MathExpr.g:62:5: ( ( rvalue ( ',' rvalue )* )? -> ^( ARGS ( rvalue )* ) )
            // MathExpr.g:63:3: ( rvalue ( ',' rvalue )* )?
            {
            // MathExpr.g:63:3: ( rvalue ( ',' rvalue )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=NUMBER && LA4_0<=IDENT)||LA4_0==25) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // MathExpr.g:63:4: rvalue ( ',' rvalue )*
                    {
                    pushFollow(FOLLOW_rvalue_in_args425);
                    rvalue12=rvalue();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_rvalue.add(rvalue12.getTree());
                    // MathExpr.g:63:11: ( ',' rvalue )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==27) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // MathExpr.g:63:12: ',' rvalue
                    	    {
                    	    char_literal13=(Token)match(input,27,FOLLOW_27_in_args428); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_27.add(char_literal13);

                    	    pushFollow(FOLLOW_rvalue_in_args430);
                    	    rvalue14=rvalue();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_rvalue.add(rvalue14.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }



            // AST REWRITE
            // elements: rvalue
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 63:28: -> ^( ARGS ( rvalue )* )
            {
                // MathExpr.g:63:32: ^( ARGS ( rvalue )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARGS, "ARGS"), root_1);

                // MathExpr.g:63:39: ( rvalue )*
                while ( stream_rvalue.hasNext() ) {
                    adaptor.addChild(root_1, stream_rvalue.nextTree());

                }
                stream_rvalue.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "args"

    public static class funcCall_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "funcCall"
    // MathExpr.g:65:1: funcCall : IDENT '(' args ')' -> ^( CALL IDENT args ) ;
    public final MathExprParser.funcCall_return funcCall() throws RecognitionException {
        MathExprParser.funcCall_return retval = new MathExprParser.funcCall_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IDENT15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        MathExprParser.args_return args17 = null;


        Object IDENT15_tree=null;
        Object char_literal16_tree=null;
        Object char_literal18_tree=null;
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleSubtreeStream stream_args=new RewriteRuleSubtreeStream(adaptor,"rule args");
        try {
            // MathExpr.g:65:9: ( IDENT '(' args ')' -> ^( CALL IDENT args ) )
            // MathExpr.g:66:3: IDENT '(' args ')'
            {
            IDENT15=(Token)match(input,IDENT,FOLLOW_IDENT_in_funcCall454); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENT.add(IDENT15);

            char_literal16=(Token)match(input,25,FOLLOW_25_in_funcCall456); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_25.add(char_literal16);

            pushFollow(FOLLOW_args_in_funcCall458);
            args17=args();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_args.add(args17.getTree());
            char_literal18=(Token)match(input,26,FOLLOW_26_in_funcCall460); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_26.add(char_literal18);



            // AST REWRITE
            // elements: args, IDENT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 66:23: -> ^( CALL IDENT args )
            {
                // MathExpr.g:66:27: ^( CALL IDENT args )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CALL, "CALL"), root_1);

                adaptor.addChild(root_1, stream_IDENT.nextNode());
                adaptor.addChild(root_1, stream_args.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "funcCall"

    public static class arrayIndex0_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "arrayIndex0"
    // MathExpr.g:69:1: arrayIndex0 : '[' -> INDEX[\"[]\"] ;
    public final MathExprParser.arrayIndex0_return arrayIndex0() throws RecognitionException {
        MathExprParser.arrayIndex0_return retval = new MathExprParser.arrayIndex0_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal19=null;

        Object char_literal19_tree=null;
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");

        try {
            // MathExpr.g:69:12: ( '[' -> INDEX[\"[]\"] )
            // MathExpr.g:70:3: '['
            {
            char_literal19=(Token)match(input,23,FOLLOW_23_in_arrayIndex0482); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_23.add(char_literal19);



            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 70:8: -> INDEX[\"[]\"]
            {
                adaptor.addChild(root_0, (Object)adaptor.create(INDEX, "[]"));

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "arrayIndex0"

    public static class lvalue_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "lvalue"
    // MathExpr.g:72:1: lvalue : ( IDENT ( arrayIndex0 rvalue ']' )* | IDENT | type IDENT );
    public final MathExprParser.lvalue_return lvalue() throws RecognitionException {
        MathExprParser.lvalue_return retval = new MathExprParser.lvalue_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IDENT20=null;
        Token char_literal23=null;
        Token IDENT24=null;
        Token IDENT26=null;
        MathExprParser.arrayIndex0_return arrayIndex021 = null;

        MathExprParser.rvalue_return rvalue22 = null;

        MathExprParser.type_return type25 = null;


        Object IDENT20_tree=null;
        Object char_literal23_tree=null;
        Object IDENT24_tree=null;
        Object IDENT26_tree=null;

        try {
            // MathExpr.g:72:7: ( IDENT ( arrayIndex0 rvalue ']' )* | IDENT | type IDENT )
            int alt6=3;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==IDENT) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==IDENT||LA6_1==23) ) {
                    alt6=3;
                }
                else if ( (synpred9_MathExpr()) ) {
                    alt6=1;
                }
                else if ( (synpred10_MathExpr()) ) {
                    alt6=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // MathExpr.g:73:3: IDENT ( arrayIndex0 rvalue ']' )*
                    {
                    root_0 = (Object)adaptor.nil();

                    IDENT20=(Token)match(input,IDENT,FOLLOW_IDENT_in_lvalue500); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENT20_tree = (Object)adaptor.create(IDENT20);
                    adaptor.addChild(root_0, IDENT20_tree);
                    }
                    // MathExpr.g:73:9: ( arrayIndex0 rvalue ']' )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==23) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // MathExpr.g:73:10: arrayIndex0 rvalue ']'
                    	    {
                    	    pushFollow(FOLLOW_arrayIndex0_in_lvalue503);
                    	    arrayIndex021=arrayIndex0();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot(arrayIndex021.getTree(), root_0);
                    	    pushFollow(FOLLOW_rvalue_in_lvalue506);
                    	    rvalue22=rvalue();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, rvalue22.getTree());
                    	    char_literal23=(Token)match(input,24,FOLLOW_24_in_lvalue508); if (state.failed) return retval;

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // MathExpr.g:74:3: IDENT
                    {
                    root_0 = (Object)adaptor.nil();

                    IDENT24=(Token)match(input,IDENT,FOLLOW_IDENT_in_lvalue515); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENT24_tree = (Object)adaptor.create(IDENT24);
                    adaptor.addChild(root_0, IDENT24_tree);
                    }

                    }
                    break;
                case 3 :
                    // MathExpr.g:75:3: type IDENT
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_type_in_lvalue519);
                    type25=type();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, type25.getTree());
                    IDENT26=(Token)match(input,IDENT,FOLLOW_IDENT_in_lvalue521); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENT26_tree = (Object)adaptor.create(IDENT26);
                    adaptor.addChild(root_0, IDENT26_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "lvalue"

    public static class rvalue_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "rvalue"
    // MathExpr.g:78:1: rvalue : ( logic | mod );
    public final MathExprParser.rvalue_return rvalue() throws RecognitionException {
        MathExprParser.rvalue_return retval = new MathExprParser.rvalue_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        MathExprParser.logic_return logic27 = null;

        MathExprParser.mod_return mod28 = null;



        try {
            // MathExpr.g:78:7: ( logic | mod )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( ((LA7_0>=NUMBER && LA7_0<=STRING)||LA7_0==25) ) {
                alt7=1;
            }
            else if ( (LA7_0==IDENT) ) {
                int LA7_2 = input.LA(2);

                if ( (LA7_2==EOF||LA7_2==IDENT||(LA7_2>=23 && LA7_2<=31)||(LA7_2>=33 && LA7_2<=38)||LA7_2==40) ) {
                    alt7=1;
                }
                else if ( (LA7_2==32) ) {
                    alt7=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 2, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // MathExpr.g:79:3: logic
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_logic_in_rvalue532);
                    logic27=logic();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, logic27.getTree());

                    }
                    break;
                case 2 :
                    // MathExpr.g:79:11: mod
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_mod_in_rvalue536);
                    mod28=mod();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, mod28.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "rvalue"

    public static class mult_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "mult"
    // MathExpr.g:82:1: mult : term ( ( '*' | '/' ) term )* ;
    public final MathExprParser.mult_return mult() throws RecognitionException {
        MathExprParser.mult_return retval = new MathExprParser.mult_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set30=null;
        MathExprParser.term_return term29 = null;

        MathExprParser.term_return term31 = null;


        Object set30_tree=null;

        try {
            // MathExpr.g:82:5: ( term ( ( '*' | '/' ) term )* )
            // MathExpr.g:83:3: term ( ( '*' | '/' ) term )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_term_in_mult547);
            term29=term();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, term29.getTree());
            // MathExpr.g:83:8: ( ( '*' | '/' ) term )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( ((LA8_0>=28 && LA8_0<=29)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // MathExpr.g:83:9: ( '*' | '/' ) term
            	    {
            	    set30=(Token)input.LT(1);
            	    set30=(Token)input.LT(1);
            	    if ( (input.LA(1)>=28 && input.LA(1)<=29) ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set30), root_0);
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

